--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,8 @@ nav div a {
     background: #303030;
     border-radius: 20px;
     margin: 20px 0;
-}#sec2 {
+}
+#sec2 {
     background: #303030;
     padding: 30px 20px;
     text-align: center;
